--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,15 @@ body {
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 768px) {
+    .hide-mobile {
+        display: none !important;
+    }
+}
+
+@media (min-width: 769px) {
+    .show-mobile {
+        display: none !important;
+    }
+}
