--- a/client/src/components/Lobby/Lobby.css
+++ b/client/src/components/Lobby/Lobby.css
@@ -6,7 +6,8 @@
     padding: 0;
 }
 
-.lobby-container {
+.lobby-container,
+.active-room-container {
     height: 100vh;
     background-color: #0b1a0b;
     background-image:
@@ -101,6 +102,22 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+}
+
+.active-room-main-layout {
+    display: flex;
+    width: 100%;
+    max-width: 95%;
+    gap: 0.5rem;
+    flex: 1;
+    overflow: hidden;
+}
+
+.active-room-main-layout main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 /* PROFILE HERO CARD SPECIFIC */
